--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
     "dotenv": "^17.2.3",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
+    "next-themes": "^0.4.6",
+    "pg": "^8.18.0",
+    "radix-ui": "^1.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "usehooks-ts": "^3.1.1",
+    "zod": "^4.3.6",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
