--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
+    "unsplash-js": "^7.0.20",
     "usehooks-ts": "^3.1.1",
     "zod": "^4.3.6",
     "zustand": "^5.0.10"
